fix: realigned decorative markup

--- a/styles/carousel/my-movies.module.scss
+++ b/styles/carousel/my-movies.module.scss
@@ -76,7 +76,7 @@
     }
     &::after {
       content: "/>";
-      bottom: 1.5vw;
+      bottom: 0.1vw;
       right: -1.8vw;
     }
 
